// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PricingCard > renders basic case correctly 1`] = `
"<div class="rounded-xl divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900 relative flex flex-col self-stretch w-full">
  <!--v-if-->
  <div class="flex-1 flex flex-col gap-y-6 sm:p-6 p-8 xl:p-10">
    <div>
      <div class="flex items-center justify-between">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
    <div class="flex flex-row items-baseline gap-x-1">
      <!--v-if-->
      <p class="text-gray-900 dark:text-white text-2xl sm:text-4xl font-semibold"> </p>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingCard > renders with props correctly 1`] = `
"<div class="rounded-xl divide-y divide-gray-200 dark:divide-gray-800 shadow bg-white dark:bg-gray-900 relative flex flex-col self-stretch w-full ring-2 ring-primary dark:ring-primary lg:scale-[1.1] lg:z-10">
  <!--v-if-->
  <div class="flex-1 flex flex-col gap-y-6 sm:p-6 p-8 xl:p-10">
    <div>
      <div class="flex items-center justify-between">
        <p class="text-2xl text-gray-900 dark:text-white sm:text-3xl font-semibold truncate">Title</p><span class="inline-flex items-center font-medium rounded-md text-xs px-2 py-1 bg-primary-50 dark:bg-primary-400 dark:bg-opacity-10 text-primary-500 dark:text-primary-400 ring-1 ring-inset ring-primary-500 dark:ring-primary-400 ring-opacity-25 dark:ring-opacity-25">Most popular</span>
      </div>
      <p class="text-sm sm:text-base text-gray-500 dark:text-gray-400 mt-2">Description</p>
    </div>
    <div class="flex flex-row items-baseline gap-x-1">
      <p class="text-gray-500 dark:text-gray-400 line-through text-xl sm:text-2xl font-medium">Price</p>
      <p class="text-gray-900 dark:text-white text-2xl sm:text-4xl font-semibold">Discount</p>
      <p class="text-gray-500 dark:text-gray-400 text-sm/6 font-medium truncate">Cycle</p>
    </div>
    <div class="flex-1">
      <ul class="space-y-3 text-sm">
        <li class="flex items-center gap-x-3"><span class="i-heroicons-check w-5 h-5 flex-shrink-0 text-primary"></span><span class="text-gray-600 dark:text-gray-400">One developer</span></li>
        <li class="flex items-center gap-x-3"><span class="i-heroicons-check w-5 h-5 flex-shrink-0 text-primary"></span><span class="text-gray-600 dark:text-gray-400">Unlimited projects</span></li>
        <li class="flex items-center gap-x-3"><span class="i-heroicons-check w-5 h-5 flex-shrink-0 text-primary"></span><span class="text-gray-600 dark:text-gray-400">Unlimited minor & patch updates</span></li>
        <li class="flex items-center gap-x-3"><span class="i-heroicons-check w-5 h-5 flex-shrink-0 text-primary"></span><span class="text-gray-600 dark:text-gray-400">Lifetime access</span></li>
      </ul>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingCard > renders with slots correctly 1`] = `
"<div class="rounded-xl divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900 relative flex flex-col self-stretch w-full">
  <div class="px-4 py-5 sm:px-6">Header slot</div>
  <div class="flex-1 flex flex-col gap-y-6 sm:p-6 p-8 xl:p-10">
    <div>
      <div class="flex items-center justify-between">
        <p class="text-2xl text-gray-900 dark:text-white sm:text-3xl font-semibold truncate">Title slot</p>
        <!--v-if-->
      </div>
      <p class="text-sm sm:text-base text-gray-500 dark:text-gray-400 mt-2">Description slot</p>
    </div>
    <div class="flex flex-row items-baseline gap-x-1">
      <!--v-if-->
      <p class="text-gray-900 dark:text-white text-2xl sm:text-4xl font-semibold"> </p>
      <!--v-if-->
    </div>
    <div class="flex-1">Features slot</div>
    <!--v-if-->
  </div>
  <div class="px-4 py-4 sm:px-6">Footer slot</div>
</div>"
`;
